--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <p>
                     <b class="i">30. prosinca 2023. u 15:00 sati.</b>
                 </p>
+                <p><i>*stvarno vrijeme se može razlikovati od navedenog </i></p>
             </div>
         </div>
     </main>
