--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="bc-i br">
                 <h4 class="i">Iduća sv. misa:</h4>
                 <p>
-                    U holu Osnovne škole Laslovo.
+                    U Osnovnoj školi Laslovo.
                 </p>
                 <p>
                     <b class="i">30. prosinca 2023. u 15:00 sati.</b>
